# ResultPP

./: CMakeLists.txt  README.md  result.hpp
crabpp/: matcher.hpp  result.hpp
examples/: CMakeLists.txt  match_example.cpp  result_example.cpp
include/crabpp/: option.hpp  result.hpp
tests/: CMakeLists.txt  main.cpp  test.cpp
